--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,39 @@ body {
 /* End Header */
 
 
+
+/* Footer */
+.panel-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+}
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+#hours, #address {
+  line-height: 2;
+}
+#hours > span, #address > span {
+  font-size: 1.3em;
+}
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+#testimonials {
+  font-style: italic;
+}
+#testimonials p:nth-child(2) {
+  margin-top: 25px;
+}
+/* END FOOTER */
+
+
+
 /* Home Page */
 .container .jumbotron {
   box-shadow: 0 0 50px #3F0C1F;
@@ -129,6 +162,7 @@ body {
   opacity: .8;
 }
 /* END HOME PAGE */
+
 
 
 /***** Large devices only *****/
@@ -213,6 +247,19 @@ body {
   }
   /* End Header */
 
+  /* Footer */
+  .panel-footer section {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .panel-footer section:nth-child(3) {
+    margin-bottom: 0; /* Margin already exists on the whole row */
+  }
+  .panel-footer section hr {
+    width: 50%;
+  }
+  /* End Footer */
+  
   /* Home Page */
   .container .jumbotron {
     margin-top: 30px;
